# soc-terminal

./: Cargo.toml  README.md  config.yaml.example
src/: app.rs  config.rs  input.rs  llm.rs  main.rs  opensearch.rs  report.rs  skills.rs  tasks.rs  ui.rs
